add parts of frontend
